--- a/bash/config
+++ b/bash/config
@@ -1,2 +1,16 @@
-export PS1="\w$ "
+export PS1="\\e[0;34m\w\\e[0m\n➜ "
 export EDITOR="mate -w"
+export LESSOPEN='| /opt/local/bin/lesspipe.sh %s'
+export MANPATH="/opt/local/man:/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
+
+# don't put duplicate lines in the history. See bash(1) for more options
+export HISTCONTROL=ignoredups
+# ... and ignore same sucessive entries.
+export HISTCONTROL=ignoreboth
+
+# colors
+export CLICOLOR=1
+export LSCOLORS=ExFxCxDxBxegedabagacad
+
+export JAVA_HOME='/System/Library/Frameworks/JavaVM.framework/Home'
+export ANT_HOME='/Developer/Java/ant'
