--- a/bash/config
+++ b/bash/config
@@ -1,5 +1,5 @@
 # export PS1="\\e[0;34m\w\\e[0m\n➜ "
-export PS1="\033[1;31m\w\n➜  \033[0m";
+export PS1="\033[1;31m\w\n\r➜\033[0m  ";
 export EDITOR="mate -w"
 export LESSOPEN='| /opt/local/bin/lesspipe.sh %s'
 export MANPATH="/opt/local/man:/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
