updated jruby config for 1.3

--- a/jruby.env
+++ b/jruby.env
@@ -5,6 +5,6 @@ export GLASSFISH_ROOT="$HOME/bin/glassfish"
 export PATH="$JRUBY_HOME/bin:$PATH"
 
 alias ruby="$JRUBY_CMD"
-alias gem="$JRUBY_CMD -S $JRUBY_HOME/bin/gem"
-alias rake="$JRUBY_CMD -S $JRUBY_HOME/bin/rake"
+alias gem="$JRUBY_HOME/bin/gem"
+alias rake="$JRUBY_HOME/bin/rake"
 alias irb="$JRUBY_HOME/bin/jirb"
