--- a/bash/config
+++ b/bash/config
@@ -12,5 +12,9 @@ export HISTCONTROL=ignoreboth
 export CLICOLOR=1
 export LSCOLORS=ExFxCxDxBxegedabagacad
 
+# java variables
 export JAVA_HOME='/System/Library/Frameworks/JavaVM.framework/Home'
 export ANT_HOME='/Developer/Java/ant'
+
+# ruby for textmate
+export TM_RUBY="/opt/local/bin/ruby"
