--- a/bash/config
+++ b/bash/config
@@ -1,6 +1,4 @@
 export PS1="\w\n➜  ";
-export EDITOR="mate -w"
-export MANPATH="/opt/local/man:/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
 
 # don't put duplicate lines in the history. See bash(1) for more options
 export HISTCONTROL=ignoredups
@@ -11,15 +9,25 @@ export HISTCONTROL=ignoreboth
 export CLICOLOR=1
 export LSCOLORS=ExFxCxDxBxegedabagacad
 
-# java variables
-export JAVA_HOME='/System/Library/Frameworks/JavaVM.framework/Home'
-export ANT_HOME='/Developer/Java/ant'
-
-# -- start rip config -- #
-RIPDIR=/Users/jsney/.rip
+# rip config
+RIPDIR=$HOME/.rip
 RUBYLIB="$RUBYLIB:$RIPDIR/active/lib"
 PATH="$PATH:$RIPDIR/active/bin"
 export RIPDIR RUBYLIB PATH
 
-# ruby for textmate
-export TM_RUBY="/opt/local/bin/ruby"
+if [ `uname` = "Darwin" ]; then
+  export EDITOR="mate -w"
+  export MANPATH="/opt/local/man:/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
+  
+  # java variables
+  export JAVA_HOME='/System/Library/Frameworks/JavaVM.framework/Home'
+  export ANT_HOME='/Developer/Java/ant'
+  
+  # ruby for textmate
+  export TM_RUBY="/opt/local/bin/ruby"
+
+  # Go language
+  export GOROOT=`brew --prefix`/Cellar/go/HEAD
+  export GOARCH=amd64
+  export GOOS=darwin
+fi
