--- a/zsh/config
+++ b/zsh/config
@@ -1,9 +1,5 @@
-if [[ -n $SSH_CONNECTION ]]; then
-  PS1='%m:%3~$(git_info_for_prompt)%# '
-else
-  PS1='%3~$(git_info_for_prompt)%# '
-fi
-
+PS1='%n@%m:%d$(git_info_for_prompt)
+➜ '
 EDITOR='mate -w'
 PATH="~/bin:/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/local/git/bin:$PATH"
 MANPATH="/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
@@ -17,29 +13,41 @@ HISTFILE=~/.zsh_history
 HISTSIZE=1000
 SAVEHIST=1000
 
+# man zshoptions
 setopt NO_BG_NICE # don't nice background tasks
 setopt NO_HUP
 setopt NO_LIST_BEEP
 setopt LOCAL_OPTIONS # allow functions to have local options
 setopt LOCAL_TRAPS # allow functions to have local traps
-setopt HIST_VERIFY
 setopt SHARE_HISTORY # share history between sessions ???
 setopt EXTENDED_HISTORY # add timestamps to history
 setopt PROMPT_SUBST
 setopt CORRECT
 setopt COMPLETE_IN_WORD
-setopt IGNORE_EOF
+setopt PRINT_EXIT_VALUE # Print the exit value of programs with non-zero exit status.
 
 setopt APPEND_HISTORY # adds history
 setopt INC_APPEND_HISTORY SHARE_HISTORY  # adds history incrementally and share it across sessions
 setopt HIST_IGNORE_ALL_DUPS  # don't record dupes in history
 setopt HIST_REDUCE_BLANKS
+setopt HIST_IGNORE_SPACE # If a line starts with a space, don't save it.
+setopt HIST_NO_STORE
+setopt HIST_VERIFY
+setopt HIST_SAVE_NO_DUPS
+setopt HIST_EXPIRE_DUPS_FIRST
+setopt HIST_FIND_NO_DUPS
 
 zle -N newtab
 
-bindkey '^[^[[D' backward-word
-bindkey '^[^[[C' forward-word
-bindkey '^[[5D' beginning-of-line
-bindkey '^[[5C' end-of-line
-bindkey '^[[3~' delete-char
-bindkey '^[^N' newtab
+bindkey "^[[5~" up-line-or-history
+bindkey "^[[6~" down-line-or-history
+bindkey "^[[H" beginning-of-line
+bindkey "^[[1~" beginning-of-line
+bindkey "^[[F"  end-of-line
+bindkey "^[[4~" end-of-line
+bindkey "^[[5D" backward-word
+bindkey "^[[5C" forward-word
+bindkey "^[[3~" delete-char
+bindkey "^[^N" newtab
+bindkey " " magic-space    # also do history expansion on space
+bindkey "^I" complete-word # complete on tab, leave expansion to _expand
