new binding for splitted windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,18 +1,19 @@
 set bell-action none
-set utf8-default on
+setw -g utf8 on
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 1
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=cyan,bold]%b %d %H:%M#[default]'
 
-# Notifying if other windows has activities
-setw -g monitor-activity on
+setw -g automatic-rename on
+setw -g monitor-activity on   # Notifying if other windows has activities
 set -g visual-activity on
 
 # Highlighting the active window in status bar
 setw -g window-status-current-bg red
 
 # Use Vi mode
+set -g status-keys vi
 setw -g mode-keys vi
 # Make mouse useful in copy mode
 setw -g mode-mouse on
@@ -20,3 +21,20 @@ setw -g mode-mouse on
 bind -n F7 previous-window
 bind -n F8 next-window
 
+# Splitting windows into panes with h and v 
+bind-key v split-window -v
+bind-key h split-window -h
+
+# Left and Right to swith between panes
+bind-key Left up-pane
+bind-key Right down-pane
+
+# Ctrl + Up, Down, Left and Right to swap panes
+unbind-key C-Up
+bind-key C-Up swap-pane -U
+unbind-key C-Down
+bind-key C-Down swap-pane -D
+unbind-key C-left
+bind-key C-Left swap-pane -U
+unbind-key C-Right
+bind-key C-Right swap-pane -D
