added new key binding for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,3 +38,6 @@ unbind-key C-left
 bind-key C-Left swap-pane -U
 unbind-key C-Right
 bind-key C-Right swap-pane -D
+
+bind-key C-b new-window
+bind-key r source-file ~/.tmux.conf
