--- a/mplayer/config
+++ b/mplayer/config
@@ -1,4 +1,7 @@
-fs=1        # fullscreen
-idx=1       # build index
-volume=60   # volume set to 60%
-af=volnorm  # normalize audio
+af=volnorm    # normalize audio
+demuxer=lavf  # more tolerance of malformed files
+fs=1          # fullscreen
+idx=1         # build index
+slang=fre     # subtitle in french
+spuaa=4       # highest level of subtitle anti-aliasing
+volume=60     # volume set to 60%
