up-pane & down pane are removed so using select-pane see : http://www.bramschoenmakers.nl/en/node/729

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,8 +26,8 @@ bind-key v split-window -v
 bind-key h split-window -h
 
 # Left and Right to swith between panes
-bind-key Left up-pane
-bind-key Right down-pane
+bind-key Left select-pane -U
+bind-key Right select-pane -D
 
 # Ctrl + Up, Down, Left and Right to swap panes
 unbind-key C-Up
