--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vim"]
-	path = vim
-	url = git@github.com:jney/vimfiles.git
+[submodule ".vim"]
+	path = .vim
+	url = https://jney@github.com/jney/vimfiles.git
