--- a/.ackrc
+++ b/.ackrc
@@ -4,4 +4,17 @@
 --follow
 --group
 --all
+
+--type-add=css=.less,.sass,.styl
+
+--ignore-dir=gems
+--ignore-dir=plugins
+--ignore-dir=rails
+--ignore-dir=log
+--ignore-dir=tmp
+--ignore-dir=scratch_directory
+--ignore-dir=cache
+--type-set=bin=.idx,.pack,.sqlite3,.sqlite3-journal,.rdb,.swf,.gif,.png,.ico,.jpg,.jpeg,.tiff,.pdf,.mp3,.JPG,.sqlite,.dat,.crt
+--nobin
+
 --pager=less -R
